# am-solidification-screening

./: .gitignore  LICENSE  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: test.yml
data/published/: steel_database_fix.tdb
notebooks/: 01_scheil_solidification_316L.ipynb  02_hot_cracking_screening.ipynb  03_composition_sensitivity.ipynb  04_printability_comparison.ipynb  build_notebooks.py
src/matreum_am_screening/: __init__.py  core.py  plotting.py  utils.py
tests/: test_core.py
