[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matreum-am-screening"
version = "0.1.0"
description = "CALPHAD-based alloy printability screening for additive manufacturing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Matreum LLC"},
]
keywords = [
    "calphad", "additive-manufacturing", "solidification",
    "pycalphad", "scheil", "hot-cracking", "printability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "pycalphad>=0.11",
    "scheil>=0.3",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jupyter>=1.0"]

[project.urls]
Homepage = "https://github.com/matreum/am-solidification-screening"
Documentation = "https://github.com/matreum/am-solidification-screening#readme"

[tool.setuptools.packages.find]
where = ["src"]
